Ordering fields passing filters

--- a/projects/web/app/views/_layout/body_layout.html
+++ b/projects/web/app/views/_layout/body_layout.html
@@ -98,7 +98,8 @@
                         </div>
                     </li>                     
                     <li><a href="#"><span class="glyphicon glyphicon-signal"></span> Statistics</a></li>    
-                    <li><a href="@{adm.PluginController.list}"><span class="glyphicon glyphicon-cloud-upload"></span> Plugins</a></li>
+                    <li><a href="@{adm.PluginController.list}"><span class="glyphicon glyphicon-cloud-upload"></span> &{'PluginController'}</a></li>
+                    <li><a href="@{guest.CredentialController.list}"><span class="glyphicon glyphicon-lock"></span> &{'CredentialController'}</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
                     
                     <!-- ################################### -->
