--- a/projects/web/app/views/_layout/layout.html
+++ b/projects/web/app/views/_layout/layout.html
@@ -29,7 +29,8 @@
         <script type="text/javascript" src="@{'/public/assets/moment/moment-with-locales.js'}"></script>
         <script type="text/javascript" src="@{'/public/assets/datetimepicker/bootstrap-datetimepicker.min.js'}"></script>
         <script type="text/javascript" src="@{'/public/assets/bootstrap-notify-master/bootstrap-notify.min.js'}"></script>
-        <script type="text/javascript" src="@{'/public/javascripts/shared-library.js'}"></script>
+        <script type="text/javascript" src="@{'/public/javascripts/shared-library.js'}"></script>        
+        <script type="text/javascript" src="@{'/public/javascripts/jquery.blockUI.js'}"></script>
         <script type="text/javascript" src="@{'/public/javascripts/main.js'}"></script>
         
         <script type="text/javascript">
