--- a/projects/web/app/views/tags/crud/searchAndAdd.html
+++ b/projects/web/app/views/tags/crud/searchAndAdd.html
@@ -16,8 +16,8 @@
 	</div>
 	
     <div class="row col-xs-12 col-sm-12 col-md-4">    
-        <button class="btn btn-primary margin-bottom col-xs-12 col-sm-12 col-md-4" type="button" onclick="javascript: block();">&{'crud.search'}</button>    
-        <input class="btn btn-primary margin-bottom col-xs-12 col-sm-12 col-md-7 pull-right" type="button" onclick="javascript: location.href = '@{blank()}'; block();" value="&{'crud.add', _caller.type}">
+        <button class="btn btn-primary margin-bottom col-xs-12 col-sm-12 col-md-4" type="button" onclick="javascript: block('&{'crud.wait'}');">&{'crud.search'}</button>    
+        <input class="btn btn-primary margin-bottom col-xs-12 col-sm-12 col-md-7 pull-right" type="button" onclick="javascript: location.href = '@{blank()}'; block('&{'crud.wait'}');" value="&{'crud.add', _caller.type}">
     </div>
     
 </div>
