Fix order by relation properties

--- a/projects/web/app/views/guest/UserGroupController/list.html
+++ b/projects/web/app/views/guest/UserGroupController/list.html
@@ -35,6 +35,10 @@
 
 <br>
 
-#{crud.table fields: ['group', 'owner', 'joined'] /}
+#{crud.table fields: ['group.name', 'owner', 'joined']}
+    #{crud.custom 'group.name'}
+        ${object.group.name}
+    #{/crud.custom}
+#{/crud.table}
 
 #{crud.pagination /}
