--- a/projects/web/app/views/guest/GroupController/blank.html
+++ b/projects/web/app/views/guest/GroupController/blank.html
@@ -31,6 +31,7 @@
                 <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
                     <label for="${field.id}">&{field.name}</label>
                     <input id="${field.id}" class="form-control"  type="text" name="${field.name}" value="${field.value}" />
+                    <span class="help-block">*&{'group.separate.users.email'}</span>                        
                     #{ifError field.name}
                         <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
                     #{/ifError} 
