--- a/projects/web/app/views/guest/UserGroupController/list.html
+++ b/projects/web/app/views/guest/UserGroupController/list.html
@@ -35,9 +35,11 @@
 
 <br>
 
+#{set url: @list().add('searchFields', params.get('searchFields')) /}
+
 #{crud.table fields: ['group.name', 'owner', 'joined']}
     #{crud.custom 'group.name'}
-        ${object.group.name}
+        <a href="@{guest.GroupController.show(object.group.id)}">${object.group.name}</a>
     #{/crud.custom}
 #{/crud.table}
 
