--- a/projects/web/app/views/guest/GroupController/show.html
+++ b/projects/web/app/views/guest/GroupController/show.html
@@ -3,24 +3,59 @@
 #{set title:messages.get('crud.show.title', type.modelName) /}
 #{set isEmptyGroup: (object.listUserGroups.size() == 1) /}
 #{set isOwner: userGroup.owner /}
-#{set hasOtherOwners: false /}
+#{set isJoined: userGroup.joined /}
 
 <div class="row crud-title">
     <div class="">  
         <div class="col-xs-12 col-sm-12 col-md-12">
             <div class="row">
                 <h1> &{'crud.show.title', type.modelName} </h1>
-            </div>
-            
-            <div class="row">
-                <pre class="col-xs-12 col-sm-12 col-md-9"> &{'crud.show.title.desc', type.modelName} </pre>            
-                <input data-toggle="modal" data-target="#deleteModal" class="col-xs-12 col-sm-12 col-md-2 btn btn-danger pull-right" type="button" value="&{'crud.delete', type.modelName}" />
-            </div>
+            </div> 
+                        
+            #{if !isJoined}  
+                <pre class="col-xs-12 col-sm-12 col-md-12"> &{'crud.show.title.desc', type.modelName} </pre>  
+            #{/if}
+            #{elseif isOwner}                
+                <pre class="col-xs-12 col-sm-12 col-md-6"> &{'crud.show.title.desc', type.modelName} </pre>  
+                <div class="col-xs-12 col-sm-12 col-md-1" >
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-5" style="padding: 0px;"> 
+                     <input data-toggle="modal" data-target="#leaveModal" 
+                        class="btn btn-warning margin-bottom col-xs-12 col-sm-12 col-md-5" 
+                        type="button" value="&{'group.leave'}" />   
+                        
+                     <input data-toggle="modal" data-target="#deleteModal" 
+                        class="btn btn-danger margin-bottom col-xs-12 col-sm-12 col-md-6 pull-right" 
+                        type="button" value="&{'crud.delete', type.modelName}" />
+                </div>                    
+            #{/elseif}
+            #{else}
+                <pre class="col-xs-12 col-sm-12 col-md-9" style="margin-right: 20px;"> &{'crud.show.title.desc', type.modelName} </pre>  
+                <input data-toggle="modal" data-target="#leaveModal" 
+                        class="col-xs-12 col-sm-12 col-md-2 btn btn-warning pull-right" 
+                        type="button" value="&{'group.leave'}" />   
+            #{/else}
         </div>
     </div>
 </div>
 
 <br>
+
+#{if !isJoined}      
+<div class="row col-lg-12" >
+&{'group.join.message'} 
+
+#{form action:@join(object._key()), enctype:'multipart/form-data'}    
+    <div class="btn-row text-center">        
+        <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_leave" value="&{'crud.no'}" />
+        <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_join" value="&{'crud.yes'}" />
+        <a href="@{guest.UserGroupController.list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>
+    </div>
+#{/form}
+
+</div>
+#{/if}
+#{else}
 
 <div class="row col-lg-12" >
 #{form action:@save(object._key()), enctype:'multipart/form-data'}
@@ -32,7 +67,7 @@
             #{field 'object.name'}
                 <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
                     <label for="${field.id}">&{field.name}</label>
-                    <input id="${field.id}" class="form-control"  type="text" name="${field.name}" value="${field.value}" />
+                    <input id="${field.id}" class="form-control" ${isOwner ? '' : 'readonly'.raw()} type="text" name="${field.name}" value="${field.value}" />
                     #{ifError field.name}
                         <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
                     #{/ifError} 
@@ -84,9 +119,6 @@
                             %{ object.listUserGroups.eachWithIndex() { item, k -> }%                           
                             
                                 #{if item.user.id != userGroup.user.id || item.group.id != userGroup.group.id}
-                                    #{if !hasOtherOwners && item.owner}
-                                        #{set hasOtherOwners: true /}
-                                    #{/if}
                                 <tr>
                                 
                                 #{if isOwner}
@@ -129,14 +161,18 @@
     
     #{/crud.form}
     
-    <div class="btn-row text-center">        
+    <div class="btn-row text-center">
+        #{if isOwner} 
         <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_save" value="&{'crud.save', type.modelName}" />
         <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_saveAndContinue" value="&{'crud.saveAndContinue', type.modelName}" />
+        #{/if}
         <a href="@{guest.UserGroupController.list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>
     </div>
     
 #{/form}
 </div>
+          
+#{/else}
 
 <div id="deleteModal" class="modal fade">
     <div class="modal-dialog">
@@ -147,11 +183,32 @@
             </div>
             <div class="modal-body">
                 <p>&{'modal.confirm.delete'}</p>
-                <p class="text-warning"><small>&{'modal.confirm.delete.desc'}</small></p>
+                <p class="text-warning"><small>&{'group.modal.confirm.delete.desc'}</small></p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">&{'modal.button.cancel'}</button>                
                 #{form @delete(object._key()), style: 'display:inline;'}
+                    <button type="submit" class="btn btn-primary">&{'modal.button.confirm'}</button>
+                #{/form}
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="leaveModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">&{'modal.confirm'}</h4>
+            </div>
+            <div class="modal-body">
+                <p>&{'group.modal.confirm.leave'}</p>
+                <p class="text-warning"><small>&{'group.modal.confirm.leave.desc'}</small></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">&{'modal.button.cancel'}</button>                
+                #{form @leave(object._key()), style: 'display:inline;'}
                     <button type="submit" class="btn btn-primary">&{'modal.button.confirm'}</button>
                 #{/form}
             </div>
