--- a/projects/web/app/views/adm/PluginController/blank.html
+++ b/projects/web/app/views/adm/PluginController/blank.html
@@ -42,19 +42,6 @@
 #{/form}
 </div>
 
-<div id="pleaseWaitDialog" class="modal fade" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-hidden="true" >
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">&{'crud.searching'}</h4>
-            </div>
-            <div class="modal-body">
-                <div class="progress progress-striped active" style="margin-bottom:0;"><div class="progress-bar" style="width: 100%"></div></div>            
-            </div>
-        </div>
-    </div>
-</div>
-
 #{set 'moreScripts' }
 <script type="text/javascript">
 $(function(){   
@@ -64,6 +51,8 @@ $(function(){
         $('#object_pluginVersion').val('');
         $('#object_cloudType').val('');
         $('#object_authType').val('');
+        $('#object_writeScope').val('');
+        $('#object_readScope').val('');
     }
     
     $('#object_name').prop('readonly', true);
@@ -93,6 +82,8 @@ $(function(){
             $('#object_pluginVersion').val(data['pluginVersion']);
             $('#object_cloudType').val(data['cloudType']);
             $('#object_authType').val(data['authType']);
+            $('#object_writeScope').val(data['writeScope']);
+            $('#object_readScope').val(data['readScope']);
         })
         .fail(function(data) {
             clearFields();
