Implemented access control for menus

--- a/projects/web/app/views/_layout/layout.html
+++ b/projects/web/app/views/_layout/layout.html
@@ -15,7 +15,8 @@
         <link rel="stylesheet" type="text/css" href="@{'/public/assets/animate/animate.css'}"/>
         <link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/bootstrap.min.css'}">
         <link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/main.css'}">
-        <link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/custom.css'}">
+        <link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/custom.css'}">        
+        <link rel="stylesheet" type="text/css" href="@{'/public/lib/multi-select/css/multi-select.css'}" media="screen">
         #{get 'moreStyles' /}
     </head>
     
@@ -31,7 +32,8 @@
         <script type="text/javascript" src="@{'/public/assets/bootstrap-notify-master/bootstrap-notify.min.js'}"></script>
         <script type="text/javascript" src="@{'/public/javascripts/shared-library.js'}"></script>        
         <script type="text/javascript" src="@{'/public/javascripts/jquery.blockUI.js'}"></script>
-        <script type="text/javascript" src="@{'/public/javascripts/main.js'}"></script>
+        <script type="text/javascript" src="@{'/public/javascripts/main.js'}"></script>        
+        <script type="text/javascript" src="@{'/public/lib/multi-select/js/jquery.multi-select.js'}"></script>
         
         <script type="text/javascript">
             // Date picker
