--- a/projects/web/app/views/adm/CoordinatorController/show.html
+++ b/projects/web/app/views/adm/CoordinatorController/show.html
@@ -14,24 +14,74 @@
 <div class="row col-lg-12" >
 #{form action:@save(), enctype:'multipart/form-data'}
 
-    #{crud.form}
-        #{crud.custom 'name'}
+    #{crud.form}     
+        
+        #{crud.custom 'listImages'}
         
             #{field 'coordinatorId'}
                 <input type="hidden" id="${field.id}" name="${field.name}" value="${object._key()}" />
             #{/field}
             
-            #{field 'object.name'}
-                <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
-                    <label for="${field.id}">&{field.name}</label>
-                    <input id="${field.id}" class="form-control"  type="text" name="${field.name}" value="${field.value}" />
-                    #{ifError field.name}
-                        <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
-                    #{/ifError} 
-                </div>
+            
+            #{field 'object.listImages'}
+                    
+            <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
+                <div class="div-label">
+                    <label for="${field.id}">
+                        &{field.name}
+                    </label>
+                    <a class="check-all ${field.id}_class_all_"></a>
+                </div>        
+        
+                <select id="${field.id}" name="${field.name}.id" multiple='multiple'>
+                
+                %{                        
+                        for(plugin in models.PluginModel.findAll()) 
+                        {                        
+                }%                        
+                            <optgroup label='${plugin.name}'>                        
+                %{                            
+                            for(image in plugin.listImages) 
+                            {                        
+                                selected = false;
+                                selected = object.listImages.contains(image);
+                                
+                }%
+                                <option value='${image.id}' ${selected ? 'selected' : ''} >${image.name}</option>                       
+                %{
+                            }
+                }%
+                            </optgroup>     
+                %{
+                        }
+                }%
+                
+                *{
+                    <optgroup label='Google'>
+                        <option value='1'>Palpatine</option>
+                        <option value='2'>Palpatine</option>
+                        <option value='3' disabled>Ubuntu</option>
+                        <option value='4' selected>Obiwan</option>
+                    </optgroup>
+                    <optgroup label='Amazon'>
+                        <option value='5'>Palpatine</option>
+                        <option value='6'>Palpatine</option>
+                        <option value='7'>Palpatine</option>
+                        <option value='8' disabled>Darth Vader</option>
+                    </optgroup>
+                    
+                }*
+                </select>     
+                
+                #{ifError field.name}
+                    <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
+                #{/ifError}  
+            </div>  
+               
             #{/field}
             
-        #{/crud.custom}        
+        #{/crud.custom}  
+        
     #{/crud.form}
     
     <div class="btn-row text-center">        
@@ -40,3 +90,13 @@
     </div>
 #{/form}
 </div>
+
+#{set 'moreScripts'}
+
+<script type="text/javascript">
+
+    $('#object_listImages').multiSelect({ selectableOptgroup: false, cssClass:"test" });
+
+</script>
+
+#{/set}
