--- a/projects/web/app/views/guest/CredentialController/show.html
+++ b/projects/web/app/views/guest/CredentialController/show.html
@@ -69,7 +69,7 @@
     <div class="btn-row text-center">        
         <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_save" value="&{'crud.save', type.modelName}" />
         <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_saveAndContinue" value="&{'crud.saveAndContinue', type.modelName}" />
-        <a href="@{list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>     
+        <a href="@{guest.VwCredentialController.list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>     
     </div>
 #{/form}
 </div>
