Synchronization job for price tables

--- a/projects/web/app/views/adm/PriceTableController/list.html
+++ b/projects/web/app/views/adm/PriceTableController/list.html
@@ -36,7 +36,13 @@
 
 <br>
 
-#{crud.table fields: ['plugin', 'priceTableDate', 'lastSearchDate', 'lastSyncDate']/}
+#{crud.table fields: ['plugin', 'priceTableDate', 'lastSearchDate', 'lastSyncDate']}
+
+    #{crud.custom 'plugin'}
+        ${object.plugin}
+    #{/crud.custom}
+
+#{/crud.table}
 
 #{crud.pagination /}
 
